[tool.poetry]
name = "course-w"
version = "0.1.0"
description = ""
authors = ["hexely <ihistos91@gmail.com>"]
readme = "README.md"
packages = [{include = "course_w"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
